force-app/main/default/objects/Creditsafe_Company_Banker__c/Creditsafe_Company_Banker__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyBankerV2</description>
    <label>Creditsafe Company Banker</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Creditsafe Company Banker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Bankers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>