force-app/main/default/objects/Creditsafe_Company_Banker__c/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>The House number of the Address.</description>
    <label>House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>