force-app/main/default/objects/Creditsafe_Company_Banker__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of bank that the company holds an account with.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>